--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -91,5 +91,11 @@
         android:layout_height="wrap_content"
         android:id="@+id/button6"
         android:onClick="delete"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:text="https://github.com/sarvesh777"
+        />
 
 </LinearLayout>
